samples/_failures_safe/1761510042_1ec65b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d0d79db4.c: In function ‘main’:
./samples/SAFE/__tmp_d0d79db4.c:158: error: expected ‘(’ at end of input
./samples/SAFE/__tmp_d0d79db4.c:157:9: error: expected declaration or statement at end of input
  157 |         if
      |         ^~
./samples/SAFE/__tmp_d0d79db4.c:157:9: error: expected declaration or statement at end of input
